<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" 
    android:background="@drawable/none">

 <LinearLayout
      android:orientation="vertical"
      android:layout_width="fill_parent"
      android:layout_height="fill_parent" >

   <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nine"
        android:textAppearance="?android:attr/textAppearanceLarge" />

 <RelativeLayout
     android:layout_width="fill_parent"
     android:layout_height="wrap_content" >

 <RadioGroup
     android:layout_width="wrap_content"
     android:layout_height="wrap_content" >

   <RadioButton
       android:id="@+id/checkBox1"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:text="Yes" />

   <RadioButton
       android:id="@+id/checkBox2"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_alignParentTop="true"
       android:layout_marginLeft="44dp"
       android:layout_toRightOf="@+id/checkBox1"
       android:text="No" />
</RadioGroup>
   
   
</RelativeLayout>
    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ten"
        android:textAppearance="?android:attr/textAppearanceLarge" />

 <RelativeLayout
     android:layout_width="fill_parent"
     android:layout_height="wrap_content" >
 
<RadioGroup
    android:layout_width="wrap_content"
    android:layout_height="wrap_content" >

     <RadioButton
        android:id="@+id/two"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Yes" />

    <RadioButton
        android:id="@+id/checkBox3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="36dp"
        android:layout_toRightOf="@+id/two"
        android:text="No" />

</RadioGroup>
</RelativeLayout>
    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/eleven"
        android:textAppearance="?android:attr/textAppearanceLarge" />

 <RelativeLayout
     android:layout_width="fill_parent"
     android:layout_height="wrap_content" >
    
<RadioGroup
    android:layout_width="wrap_content"
    android:layout_height="wrap_content" >

    <RadioButton
        android:id="@+id/three"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Yes" />

    <RadioButton
        android:id="@+id/six"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@+id/three"
        android:text="No" />
  </RadioGroup>     
</RelativeLayout>
    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/four"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    

 <RelativeLayout
     android:layout_width="fill_parent"
     android:layout_height="wrap_content" >
   
  <RadioGroup
      android:layout_width="wrap_content"
      android:layout_height="wrap_content" >

     <RadioButton
        android:id="@+id/four"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Yes" />

    <RadioButton
        android:id="@+id/seven"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="20dp"
        android:layout_toRightOf="@+id/four"
        android:text="No" />
</RadioGroup>   
</RelativeLayout>
    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/five"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    
 <RelativeLayout
     android:layout_width="fill_parent"
     android:layout_height="wrap_content" >
  
 <RadioGroup
     android:layout_width="wrap_content"
     android:layout_height="wrap_content" >

     <RadioButton
        android:id="@+id/five"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Yes" />

    <RadioButton
        android:id="@+id/eight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="No" />
</RadioGroup>
</RelativeLayout>  
  
    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/six"
        android:textAppearance="?android:attr/textAppearanceLarge" />

 <RelativeLayout
     android:layout_width="fill_parent"
     android:layout_height="wrap_content" >
 
<RadioGroup
    android:layout_width="wrap_content"
    android:layout_height="wrap_content" >

     <RadioButton
        android:id="@+id/none"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Yes" />

    <RadioButton
        android:id="@+id/ntwo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="36dp"
        android:layout_toRightOf="@+id/none"
        android:text="No" />

</RadioGroup>
</RelativeLayout>

   
    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/seven"
        android:textAppearance="?android:attr/textAppearanceLarge" />

 <RelativeLayout
     android:layout_width="fill_parent"
     android:layout_height="wrap_content" >
 
<RadioGroup
    android:layout_width="wrap_content"
    android:layout_height="wrap_content" >

     <RadioButton
        android:id="@+id/nthree"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Yes" />

    <RadioButton
        android:id="@+id/nfour"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="36dp"
        android:layout_toRightOf="@+id/nfour"
        android:text="No" />

</RadioGroup>
</RelativeLayout>
 
     <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/eight"
        android:textAppearance="?android:attr/textAppearanceLarge" />

 <RelativeLayout
     android:layout_width="fill_parent"
     android:layout_height="wrap_content" >
 
<RadioGroup
    android:layout_width="wrap_content"
    android:layout_height="wrap_content" >

     <RadioButton
        android:id="@+id/nfive"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Yes" />

    <RadioButton
        android:id="@+id/nsix"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="36dp"
        android:layout_toRightOf="@+id/nfive"
        android:text="No" />

</RadioGroup>
</RelativeLayout>
 
     <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="goitre(enlargement of thyroid gland)"
        android:textAppearance="?android:attr/textAppearanceLarge" />

 <RelativeLayout
     android:layout_width="fill_parent"
     android:layout_height="wrap_content" >
 
<RadioGroup
    android:layout_width="wrap_content"
    android:layout_height="wrap_content" >

     <RadioButton
        android:id="@+id/nseven"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Yes" />

    <RadioButton
        android:id="@+id/neight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="36dp"
        android:layout_toRightOf="@+id/nseven"
        android:text="No" />

</RadioGroup>
</RelativeLayout>

 
     <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="cretinism"
        android:textAppearance="?android:attr/textAppearanceLarge" />

 <RelativeLayout
     android:layout_width="fill_parent"
     android:layout_height="wrap_content" >
 
<RadioGroup
    android:layout_width="wrap_content"
    android:layout_height="wrap_content" >

     <RadioButton
        android:id="@+id/nnine"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Yes" />

    <RadioButton
        android:id="@+id/nten"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="36dp"
        android:layout_toRightOf="@+id/nnine"
        android:text="No" />

</RadioGroup>
</RelativeLayout>

  
     <TextView
        android:id="@+id/textView117"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="•	haemorrhages around hair follicles, swollen and bleeding gums and slow healing"
        android:textAppearance="?android:attr/textAppearanceLarge" />

 <RelativeLayout
     android:layout_width="fill_parent"
     android:layout_height="wrap_content" >
 
<RadioGroup
    android:layout_width="wrap_content"
    android:layout_height="wrap_content" >

     <RadioButton
        android:id="@+id/neleven"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Yes" />

    <RadioButton
        android:id="@+id/ntwelve"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="36dp"
        android:layout_toRightOf="@+id/neleven"
        android:text="No" />

</RadioGroup>
</RelativeLayout>

     <TextView
        android:id="@+id/textView101"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="•	painful joints, minute"
        android:textAppearance="?android:attr/textAppearanceLarge" />

 <RelativeLayout
     android:layout_width="fill_parent"
     android:layout_height="wrap_content" >
 
<RadioGroup
    android:layout_width="wrap_content"
    android:layout_height="wrap_content" >

     <RadioButton
        android:id="@+id/nthirteen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Yes" />

    <RadioButton
        android:id="@+id/nfourteen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="36dp"
        android:layout_toRightOf="@+id/nthirteen"
        android:text="No" />

</RadioGroup>
</RelativeLayout>

     <TextView
        android:id="@+id/textView102"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Clinically recognisable signs of beriberi "
        android:textAppearance="?android:attr/textAppearanceLarge" />

 <RelativeLayout
     android:layout_width="fill_parent"
     android:layout_height="wrap_content" >
 
<RadioGroup
    android:layout_width="wrap_content"
    android:layout_height="wrap_content" >

     <RadioButton
        android:id="@+id/nfifteen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Yes" />

    <RadioButton
        android:id="@+id/nsixteen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="36dp"
        android:layout_toRightOf="@+id/fifteen"
        android:text="No" />

</RadioGroup>
</RelativeLayout>

     <TextView
        android:id="@+id/textView13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Dermatitis"
        android:textAppearance="?android:attr/textAppearanceLarge" />

 <RelativeLayout
     android:layout_width="fill_parent"
     android:layout_height="wrap_content" >
 
<RadioGroup
    android:layout_width="wrap_content"
    android:layout_height="wrap_content" >

     <RadioButton
        android:id="@+id/checkbox3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Yes" />

    <RadioButton
        android:id="@+id/checkbox4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="36dp"
        android:layout_toRightOf="@+id/checkbox3"
        android:text="No" />

</RadioGroup>
</RelativeLayout>

 
     <TextView
        android:id="@+id/textView114"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="•	dementia"
        android:textAppearance="?android:attr/textAppearanceLarge" />

 <RelativeLayout
     android:layout_width="fill_parent"
     android:layout_height="wrap_content" >
 
<RadioGroup
    android:layout_width="wrap_content"
    android:layout_height="wrap_content" >

     <RadioButton
        android:id="@+id/checkbox5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Yes" />

    <RadioButton
        android:id="@+id/checkbox6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="36dp"
        android:layout_toRightOf="@+id/checkbox5"
        android:text="No" />

</RadioGroup>
</RelativeLayout>

     <TextView
        android:id="@+id/textView145"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="•	diarrhoea"
        android:textAppearance="?android:attr/textAppearanceLarge" />

 <RelativeLayout
     android:layout_width="fill_parent"
     android:layout_height="wrap_content" >
 
<RadioGroup
    android:layout_width="wrap_content"
    android:layout_height="wrap_content" >

     <RadioButton
        android:id="@+id/checkbox7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Yes" />

    <RadioButton
        android:id="@+id/checkbox8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="36dp"
        android:layout_toRightOf="@+id/checkbox7"
        android:text="No" />

</RadioGroup>
</RelativeLayout>

     <TextView
        android:id="@+id/textView122"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="•	Cassals necklace"
        android:textAppearance="?android:attr/textAppearanceLarge" />

 <RelativeLayout
     android:layout_width="fill_parent"
     android:layout_height="wrap_content" >
 
<RadioGroup
    android:layout_width="wrap_content"
    android:layout_height="wrap_content" >

     <RadioButton
        android:id="@+id/checkbox9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Yes" />

    <RadioButton
        android:id="@+id/checkbox10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="36dp"
        android:layout_toRightOf="@+id/checkbox9"
        android:text="No" />

</RadioGroup>
</RelativeLayout>

 
 <Button
              android:id="@+id/next"
              android:layout_width="fill_parent"
              android:layout_height="wrap_content"
              android:layout_marginTop="10dip"
              android:text="Continue the process" />

 <TextView
     android:id="@+id/output"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
    />
 </LinearLayout> 
</ScrollView>
